--- a/css/style.css
+++ b/css/style.css
@@ -1,155 +1,60 @@
-/* Basic reset */
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	
-	/* Better text styling */
-	font: bold 14px Arial, sans-serif;
+*{ box-sizing: border-box; }
+
+.calculator{
+  background-color: #2d3436;    
+  border-radius: 10px;
+  box-shadow: 2px 2px 15px 5px gray;
+  font-family: 'Share Tech Mono', monospace;
+  padding: 8px;
+  width: 330px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-
-
-/* A nice BG gradient */
-html {
-	height: 100%;
-	background: #a8eab9;
-    background-size: cover;
+.screen{
+  background-color: #b2bec3;
+  border-radius: 30px;
+  color: #006266;
+  height: 100px;
 }
 
-/* Using box shadows to create 3D effects */
-#calculator {
-	width: 325px;
-	height: auto;
-	
-	margin: 180px auto;
-	padding: 20px 20px 9px;
-	
-	background: #9dd2ea;
-	background: linear-gradient(#9dd2ea, #8bceec);
-	border-radius: 3px;
-	box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
+.buttons{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-/* Top portion */
-.top span.clear {
-	float: left;
+.btn{
+  cursor: pointer;
+  background-color: #808e9b;
+  box-shadow: 2px 2px 10px black;
+  border-radius: 5px;
+  color: white;
+  font-size: 28px;
+  margin: 10px 6px;
+  font-family: 'Share Tech Mono', monospace;
+  border: none;
+  height: 50px;
+  width: 60px;
 }
 
-/* Inset shadow on the screen to create indent */
-.top .screen {
-	height: 40px;
-	width: 212px;
-	
-	float: right;
-	
-	padding: 0 10px;
-	
-	background: rgba(0, 0, 0, 0.2);
-	border-radius: 3px;
-	box-shadow: inset 0px 4px rgba(0, 0, 0, 0.2);
-	
-	/* Typography */
-	font-size: 17px;
-	line-height: 40px;
-	color: white;
-	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-	text-align: right;
-	letter-spacing: 1px;
+.btn:hover{
+  box-shadow: none;
+  transition: 0.6s;
 }
 
-/* Clear floats */
-.keys, .top {overflow: hidden;}
+.btn:nth-child(1){ background-color: #c0392b; }
 
-/* Applying same to the keys */
-.keys span, .top span.clear {
-	float: left;
-	position: relative;
-	top: 0;
-	
-	cursor: pointer;
-	
-	width: 66px;
-	height: 36px;
-	
-	background: white;
-	border-radius: 3px;
-	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
-	
-	margin: 0 7px 11px 0;
-	
-	color: #888;
-	line-height: 36px;
-	text-align: center;
-	
-	/* prevent selection of text inside keys */
-	user-select: none;
-	
-	/* Smoothing out hover and active states using css3 transitions */
-	transition: all 0.2s ease;
+.btn:nth-child(2){ background-color: #c0392b; }
+
+.btn:nth-child(17){
+  background-color: #27ae60;
+  flex-basis: 45%;
 }
 
-/* Remove right margins from operator keys */
-/* style different type of keys (operators/evaluate/clear) differently */
-.keys span.operator {
-	background: #FFF0F5;
-	margin-right: 0;
-}
+.btn:nth-child(18){ flex-basis: 45%; }
 
-.keys span.eval {
-	background: #f1ff92;
-	box-shadow: 0px 4px #9da853;
-	color: #888e5f;
-}
-
-.top span.clear {
-	background: #ff9fa8;
-	box-shadow: 0px 4px #ff7c87;
-	color: white;
-}
-
-/* Some hover effects */
-.keys span:hover {
-	background: #9c89f6;
-	box-shadow: 0px 4px #6b54d3;
-	color: white;
-}
-
-.keys span.eval:hover {
-	background: #abb850;
-	box-shadow: 0px 4px #717a33;
-	color: #ffffff;
-}
-
-.top span.clear:hover {
-	background: #f68991;
-	box-shadow: 0px 4px #d3545d;
-	color: white;
-}
-
-/* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
-.keys span:active {
-	box-shadow: 0px 0px #6b54d3;
-	top: 4px;
-}
-
-.keys span.eval:active {
-	box-shadow: 0px 0px #717a33;
-	top: 4px;
-}
-
-.top span.clear:active {
-	top: 4px;
-	box-shadow: 0px 0px #d3545d;
-}
-
-h1 {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-a.link {
-  text-decoration: none;
-  font: normal 14px Helvetica, Arial, sans-serif;
-  color: green;
+h1{
+  padding: 32px 15px;
+  text-align: right;
 }
